# packages/server/openapi/swagger.json
@@ -64,212 +64,6 @@
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"Profession": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"name": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"name"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Business": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"name": {
-						"type": "string"
-					},
-					"registrationNumber": {
-						"type": "string"
-					},
-					"professions": {
-						"items": {
-							"$ref": "#/components/schemas/Profession"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"name",
-					"registrationNumber",
-					"professions"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"BusinessInsertable": {
-				"$ref": "#/components/schemas/Business"
-			},
-			"Address": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"city": {
-						"type": "string"
-					},
-					"street": {
-						"type": "string"
-					},
-					"state": {
-						"type": "string"
-					},
-					"zip": {
-						"type": "string"
-					},
-					"country": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"city",
-					"street",
-					"zip",
-					"country"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Contact": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"email": {
-						"type": "string"
-					},
-					"phone": {
-						"type": "string"
-					},
-					"note": {
-						"type": "string"
-					},
-					"address": {
-						"$ref": "#/components/schemas/Address"
-					}
-				},
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Permission": {
-				"enum": [
-					"users_read",
-					"users_write",
-					"finances_read",
-					"finances_write",
-					"contracts_read",
-					"contracts_write"
-				],
-				"type": "string"
-			},
-			"MonetaryValue": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"amount": {
-						"type": "number",
-						"format": "double"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"currency": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"amount",
-					"createdAt",
-					"currency"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"User": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"name": {
-						"type": "string"
-					},
-					"username": {
-						"type": "string"
-					},
-					"password": {
-						"type": "string"
-					},
-					"contacts": {
-						"items": {
-							"$ref": "#/components/schemas/Contact"
-						},
-						"type": "array"
-					},
-					"groups": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
-					},
-					"permissions": {
-						"items": {
-							"$ref": "#/components/schemas/Permission"
-						},
-						"type": "array"
-					},
-					"wage": {
-						"$ref": "#/components/schemas/MonetaryValue"
-					}
-				},
-				"required": [
-					"name",
-					"username"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Pick_User.Exclude_keyofUser.username-or-password-or-groups__": {
-				"properties": {},
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_User.username-or-password-or-groups_": {
-				"$ref": "#/components/schemas/Pick_User.Exclude_keyofUser.username-or-password-or-groups__"
-			},
-			"Required_Pick_User.username-or-password-or-groups__": {
-				"properties": {},
-				"type": "object",
-				"description": "Make all properties in T required"
-			},
-			"SetRequired_User.username-or-password-or-groups_": {
-				"allOf": [
-					{
-						"$ref": "#/components/schemas/Omit_User.username-or-password-or-groups_"
-					},
-					{
-						"$ref": "#/components/schemas/Required_Pick_User.username-or-password-or-groups__"
-					}
-				]
-			},
-			"UserInsertable": {
-				"$ref": "#/components/schemas/SetRequired_User.username-or-password-or-groups_"
 			}
 		},
 		"securitySchemes": {
@@ -347,133 +141,6 @@
 						}
 					}
 				}
-			}
-		},
-		"/businesses": {
-			"get": {
-				"operationId": "GetAllBusinesses",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/Business"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			},
-			"post": {
-				"operationId": "CreateBusiness",
-				"responses": {
-					"201": {
-						"description": "Created",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/Business"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/BusinessInsertable"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/users": {
-			"get": {
-				"operationId": "GetAllUsers",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/User"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			},
-			"post": {
-				"operationId": "CreateUser",
-				"responses": {
-					"201": {
-						"description": "Created",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/User"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/UserInsertable"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/users/{userId}": {
-			"get": {
-				"operationId": "GetUser",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/User"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "userId",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
 			}
 		}
 	},
